Fixed the navbar for bootstagram theme. It now pulls in the proper menu items based on login status and roles. Fixed a style issue causing the image upload modal to be invisible and cover up most of the page.

--- a/app/assets/stylesheets/bootstagram/home.css.scss
+++ b/app/assets/stylesheets/bootstagram/home.css.scss
@@ -74,3 +74,28 @@ input[readonly] {
   font-size: 2rem;
   color: #fafafa;
 }
+
+#header #loginModal {
+  padding: 0px;
+  background: rgba(255, 255, 255, 0.90);
+
+  h3 {
+    font-size: 2.5em;
+    font-weight: 300;
+    margin-bottom: 20px;
+  }
+
+  .control-label {
+    font-size: 2em;
+    padding-bottom: 5px;
+  }
+
+  .user_remember_me {
+    font-size: 2em;
+    padding-bottom: 5px;
+  }
+
+  .modal-header .user_email input:-webkit-autofill {
+    background-color: #fff;
+  }
+}
